// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"size":{"base":"x-small","xs":"small","s":"medium","m":"large","l":"x-large","xl":"inherit"},"hideLabel":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"alignLabel":{"base":"left","xs":"right","s":"left","m":"right","l":"left","xl":"right"},"underline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  display: block;
}
@media(min-width:480px) {
  :host {
    display: inline-block;
    vertical-align: top;
  }
}

@media(min-width:760px) {
  :host {
    display: block;
  }
}

@media(min-width:1000px) {
  :host {
    display: inline-block;
    vertical-align: top;
  }
}

@media(min-width:1300px) {
  :host {
    display: block;
  }
}

@media(min-width:1760px) {
  :host {
    display: inline-block;
    vertical-align: top;
  }
}

.root {
  display: flex;
  gap: 4px;
  width: 100%;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: space-between;
  align-items: center;
  font-size: .875rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: fixed;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
.root:focus::before {
  border: 2px solid #0A0AFF;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  white-space: nowrap;
  text-indent: -999999px;
  order: -1;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@media(min-width:480px) {
  .root {
    justify-content: flex-start;
    align-items: flex-start;
    font-size: 1rem;
  }
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
    order: 0;
  }
}

@media(min-width:760px) {
  .root {
    justify-content: space-between;
    align-items: center;
    font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
  }
  .label {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    white-space: nowrap;
    text-indent: -999999px;
    order: -1;
  }
}

@media(min-width:1000px) {
  .root {
    justify-content: flex-start;
    align-items: flex-start;
    font-size: clamp(1.44rem, .3vw + 1.38rem, 1.71rem);
  }
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
    order: 0;
  }
}

@media(min-width:1300px) {
  .root {
    justify-content: space-between;
    align-items: center;
    font-size: clamp(1.73rem, .57vw + 1.61rem, 2.24rem);
  }
  .label {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    white-space: nowrap;
    text-indent: -999999px;
    order: -1;
  }
}

@media(min-width:1760px) {
  .root {
    justify-content: flex-start;
    align-items: flex-start;
    font-size: inherit;
  }
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
    order: 0;
  }
}

@media(hover:hover) {
  .root:hover::before {
    background-color: rgba(83, 83, 83, 0.25);
    -webkit-backdrop-filter: blur(8px);
    backdrop-filter: blur(8px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":false,"size":"small","hideLabel":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"alignLabel":"right","underline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: fixed;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
.root:focus::before {
  border: 2px solid #0A0AFF;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  white-space: nowrap;
  text-indent: -999999px;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@media(min-width:480px) {
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
  }
}

@media(min-width:760px) {
  .label {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    white-space: nowrap;
    text-indent: -999999px;
  }
}

@media(min-width:1000px) {
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
  }
}

@media(min-width:1300px) {
  .label {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    white-space: nowrap;
    text-indent: -999999px;
  }
}

@media(min-width:1760px) {
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
  }
}

@media(hover:hover) {
  .root:hover::before {
    background-color: rgba(83, 83, 83, 0.25);
    -webkit-backdrop-filter: blur(8px);
    backdrop-filter: blur(8px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"right","underline":false,"hasSlottedAnchor":false,"theme":"dark"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  color: #FBFCFF;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: fixed;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
.root:focus::before {
  border: 2px solid #0A0AFF;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@media(hover:hover) {
  .root:hover::before {
    background-color: rgba(144, 144, 153, 0.25);
    -webkit-backdrop-filter: blur(8px);
    backdrop-filter: blur(8px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"right","underline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: fixed;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
.root:focus::before {
  border: 2px solid #0A0AFF;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@media(hover:hover) {
  .root:hover::before {
    background-color: rgba(83, 83, 83, 0.25);
    -webkit-backdrop-filter: blur(8px);
    backdrop-filter: blur(8px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"right","underline":false,"hasSlottedAnchor":true,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
::slotted(a) {
  outline: 0 !important;
  text-decoration: none !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before {
  content: "" !important;
  position: fixed !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border-radius: 4px !important;
}
::slotted(a:focus)::before {
  border: 2px solid #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before {
  border: 0 !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: fixed;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@media(hover:hover) {
  .root:hover::before {
    background-color: rgba(83, 83, 83, 0.25);
    -webkit-backdrop-filter: blur(8px);
    backdrop-filter: blur(8px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"right","underline":true,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: underline;
}
.root::before {
  content: "";
  position: fixed;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
.root:focus::before {
  border: 2px solid #0A0AFF;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@media(hover:hover) {
  .root:hover::before {
    background-color: rgba(83, 83, 83, 0.25);
    -webkit-backdrop-filter: blur(8px);
    backdrop-filter: blur(8px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":false,"size":"small","hideLabel":true,"alignLabel":"right","underline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: fixed;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
.root:focus::before {
  border: 2px solid #0A0AFF;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  white-space: nowrap;
  text-indent: -999999px;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@media(hover:hover) {
  .root:hover::before {
    background-color: rgba(83, 83, 83, 0.25);
    -webkit-backdrop-filter: blur(8px);
    backdrop-filter: blur(8px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":false,"size":"small","hideLabel":true,"alignLabel":"right","underline":false,"hasSlottedAnchor":false,"theme":"light"} 2`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: fixed;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
.root:focus::before {
  border: 2px solid #0A0AFF;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  white-space: nowrap;
  text-indent: -999999px;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@media(hover:hover) {
  .root:hover::before {
    background-color: rgba(83, 83, 83, 0.25);
    -webkit-backdrop-filter: blur(8px);
    backdrop-filter: blur(8px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":false,"size":"small","hideLabel":true,"alignLabel":"right","underline":false,"hasSlottedAnchor":true,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
::slotted(a) {
  outline: 0 !important;
  text-decoration: none !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before {
  content: "" !important;
  position: fixed !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border-radius: 4px !important;
}
::slotted(a:focus)::before {
  border: 2px solid #0A0AFF !important;
}
::slotted(a:focus:not(:focus-visible))::before {
  border: 0 !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: fixed;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
.label {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  white-space: nowrap;
  text-indent: -999999px;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@media(hover:hover) {
  .root:hover::before {
    background-color: rgba(83, 83, 83, 0.25);
    -webkit-backdrop-filter: blur(8px);
    backdrop-filter: blur(8px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":true,"stretch":true,"size":"x-large","hideLabel":false,"alignLabel":"left","underline":false,"hasSlottedAnchor":false,"theme":"dark"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  display: block;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  color: #FBFCFF;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: space-between;
  align-items: center;
  font-size: clamp(1.73rem, .57vw + 1.61rem, 2.24rem);
  text-decoration: none;
}
.root::before {
  content: "";
  position: fixed;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
  background-color: rgba(144, 144, 153, 0.25);
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
}
.root:focus::before {
  border: 2px solid #0A0AFF;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  order: -1;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@media(hover:hover) {
  .root:hover::before {
    background-color: rgba(144, 144, 153, 0.25);
    -webkit-backdrop-filter: blur(8px);
    backdrop-filter: blur(8px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":true,"stretch":true,"size":"x-large","hideLabel":false,"alignLabel":"left","underline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  display: block;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: space-between;
  align-items: center;
  font-size: clamp(1.73rem, .57vw + 1.61rem, 2.24rem);
  text-decoration: none;
}
.root::before {
  content: "";
  position: fixed;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
  background-color: rgba(83, 83, 83, 0.25);
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
}
.root:focus::before {
  border: 2px solid #0A0AFF;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  order: -1;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@media(hover:hover) {
  .root:hover::before {
    background-color: rgba(83, 83, 83, 0.25);
    -webkit-backdrop-filter: blur(8px);
    backdrop-filter: blur(8px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"none","active":false,"stretch":false,"size":"inherit","hideLabel":false,"alignLabel":"right","underline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: inherit;
  text-decoration: none;
}
.root::before {
  content: "";
  position: fixed;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
.root:focus::before {
  border: 2px solid #0A0AFF;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
}
@media(hover:hover) {
  .root:hover::before {
    background-color: rgba(83, 83, 83, 0.25);
    -webkit-backdrop-filter: blur(8px);
    backdrop-filter: blur(8px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"none","active":false,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"right","underline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: fixed;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
.root:focus::before {
  border: 2px solid #0A0AFF;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
}
@media(hover:hover) {
  .root:hover::before {
    background-color: rgba(83, 83, 83, 0.25);
    -webkit-backdrop-filter: blur(8px);
    backdrop-filter: blur(8px);
  }
}
"
`;
